src/test/deca/syntax/valid/parser/with_object/class_with_fields_and_methods.deca
class A{
  float f(int x, float f){
    int i = 0;
    println(i);
  }

  protected int x;

  int g(float f){
	return f;
  }

  protected float y;
  boolean b;
}
{}