src/test/deca/syntax/invalid/parser/with_object/method_block_invalid6.deca

class A { a a (a a) {int class = 0;} }
